fix(CodeSnippet): v10 - fix horizontal scrolling with keyboard (#14910)
* fix(CodeSnippet): v10 - fix horizontal scrolling with keyboard

* style(CodeSnippet): remove after element entirely

--- a/packages/components/src/components/code-snippet/_code-snippet.scss
+++ b/packages/components/src/components/code-snippet/_code-snippet.scss
@@ -212,31 +212,12 @@
   .#{$prefix}--snippet--multi .#{$prefix}--snippet-container pre {
     padding-right: $carbon--spacing-08;
     padding-bottom: to-rem(24px);
-    overflow-x: auto;
   }
 
   .#{$prefix}--snippet--multi.#{$prefix}--snippet--no-copy
     .#{$prefix}--snippet-container
     pre {
     padding-right: 0;
-  }
-
-  // expanded pre
-  .#{$prefix}--snippet--multi.#{$prefix}--snippet--expand
-    .#{$prefix}--snippet-container
-    pre {
-    overflow-x: auto;
-  }
-
-  .#{$prefix}--snippet--multi .#{$prefix}--snippet-container pre::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: to-rem(16px);
-    height: 100%;
-    // Safari interprets `transparent` differently, so make color token value transparent instead:
-    background-image: linear-gradient(to right, rgba($field-01, 0), $field-01);
-    content: '';
   }
 
   .#{$prefix}--snippet--multi .#{$prefix}--snippet-container pre code {
